--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
+    "node": "^21.2.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
